--- a/sass/_referencias.scss
+++ b/sass/_referencias.scss
@@ -2,18 +2,7 @@
 
 /* 
 NOTAS:
-En este punto incluí un grid system en una section por que la profesora dijo que era mejor utilizar tanto grid nativo como grid system, y poder corroborar el manejo de ambos para la entrega, lo cual es muy logico en terminos academicos y me vino muy bien para aprender.
-
-Se me ocurrio incluirlo aca para acomodar la seccion con todos los enlaces de las referencias y reseñas de la gente para con el sitio.
-
-La verdad que fue muy engorroso por que el CDN de bootstrap me modifico un monton de propiedades por default de CSS (que en el mio no estaban explicitas) y me desacomodo todo el html.
-
-Para que quede implementado correctamente tuve que rastrear una por una estas modificaciones. 
-
-ME GUSTARIA SABER SI HAY ALGUNA MANERA MENOS ORTODOXA DE COMPLEMENTAR BOOTSTRAP CON UN MAQUETADO DE CSS NATIVO
-
-esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de usar un grid system. El problema surge con la necesidad de incorporar componentes.
-*/
+En este punto incluí un grid system en una section con fines academicos, para aplicarlo en algun punto del proyecto. */
 
 .mainReferencias {
     @include flexbox(flex, column, center, center);
@@ -21,6 +10,11 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
     background-color: $GrisGarantia;
     margin: 30px 7.5% 30px 7.5%;
     border-radius: 10px;
+
+    @media(min-width: 900px) {
+        background-image: url(../images/fondo-reseñas-opacity-3.png);
+        background-size: cover;
+    }
 
 }
 
@@ -35,6 +29,10 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
     padding: 1.5%;
     font-size: 1.3rem;
     font-weight: bold;
+
+    @media(min-width:605px) {
+        font-size: 1.875rem;
+    }
 }
 
 
@@ -61,5 +59,17 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
     margin: 10px;
     padding: 0px;
     width: 200px;
+
+    @media(min-width:410px) {
+        width: 300px;
+    }
+
+    @media(min-width:500px) {    
+        width: 350px;
+    }
+
+    @media(min-width:1225px) {
+        width: 475px;
+    }
 }
 
