--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,9 +7,15 @@
 @import "nosotros";
 @import "reparaciones";
 
+/* Importo las fuentes con las que se va a trabajar en el proyecto */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto+Condensed:wght@300;400&family=Roboto:wght@300&display=swap');
-/* Asi se comenta en CSS*/
-/*, este es el reseteo*/
+
+
+/* Este archivo .SCSS contiene estilos generales aplicados a todos los html */
+
+/* ----------- MEDIA QUERIES -----------  */
+/* El objetivo fue que el sitio sea completamente responsive, en todos sus html a partir de un ancho de ventana de 300px */
+
 * {
     padding: 0;
     margin: 0;
@@ -28,7 +34,6 @@ body {
 
 /* ----------- TEXTO ----------- */
 
-/* Etiqueta Anchor*/
 a {
     text-decoration: none;
     color: #fffefd;
@@ -95,10 +100,8 @@ header {
 
 nav {
     background-color: $AzulDrean;
-    /* 2158a7 color viejo */
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
+    @include flexbox(flex, row, space-around, normal);
+    flex-wrap: wrap;
     top: 0;
     height: 61px;
 }
@@ -112,15 +115,17 @@ nav {
 .nav2 {
     grid-area: nav2;
     position: sticky;
+    top: 61px;
 
+    @media(min-width:717px) {
+        top: 0px;
+    }
 }
 
 
 .hijonav2 {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
+    @include flexbox (flex, row, center, center);
+    flex-wrap: wrap;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -136,16 +141,7 @@ nav {
         border-right: none;
     }
 
-
 }
-
-
-
-
-
-
-
-
 
 /* ----------- "pre footer" seccion Garantia  ----------- */
 
@@ -156,10 +152,8 @@ nav {
 }
 
 .garantia--L {
+    @include flexbox(flex, row, start, center);
     grid-area: garantia1;
-    display: flex;
-    align-items: center;
-    justify-content: start;
     padding: 0 0 0 5%;
 }
 
@@ -172,6 +166,10 @@ nav {
     display: flex;
     justify-content: center;
     padding-right: 5%;
+
+    @media(min-width:480px) {
+        justify-content: end;
+    }
 }
 
 .garantia--h2 {
@@ -190,7 +188,24 @@ nav {
 /* ----------- FOOTER ----------- */
 
 
-/* los estilos de <footer> lo llevo a la parte de Media Queries, linea 600 */
+footer {
+    @include flexbox(flex, column, space-between, center);
+    background-color: $AzulDrean;
+    flex-wrap: wrap;
+    padding: 0 2% 0 2%;
+    grid-area: footer;
+
+    @media(min-width:371px) {
+        @include flexbox (flex, row, space-between, center);
+        background-color: $AzulDrean;
+        flex-wrap: wrap;
+        height: 65.8px;
+        padding: 0 2% 0 2%;
+        grid-area: footer;
+    }
+
+
+}
 
 .footerL {
     display: flex;
@@ -205,6 +220,10 @@ nav {
     font-family: 'Roboto', sans-serif;
     font-size: 11px;
     color: #000000;
+
+    @media(min-width:410px) {
+        font-size: small;
+    }
 }
 
 .footerR {
@@ -247,25 +266,12 @@ nav {
 }
 
 
-
-
 /* ----------- Grilla GENERAL (body) ---------- */
-
-/* La clase de la grilla general se desarrolla en la parte de media queries (linea 598) */
 
 main {
     padding: 0;
     grid-area: main;
 }
-
-
-
-
-
-
-/* ----------- MEDIA QUERIES -----------  */
-/* El objetivo fue que el sitio sea completamente responsive, en todos sus html a partir de un ancho de ventana de 300px */
-
 
 .gridIndex {
     display: grid;
@@ -277,125 +283,10 @@ main {
         "garantia1"
         "garantia2"
         "footer";
-}
 
-.nav1 {
-    position: sticky;
-}
+    /* Acomodo el preefooter */
 
-.nav2 {
-    position: sticky;
-    top: 61px;
-}
-
-
-.primeraSeccion {
-    display: grid;
-
-    grid-template:
-        "title"auto 
-        "lista"1fr 
-        "boton"2fr;
-    place-items: center center;
-
-}
-
-.h1Main {
-    font-size: 1.5rem;
-}
-
-.primeraSeccion__div__lista li {
-
-    padding-bottom: 2%;
-}
-
-footer {
-    background-color: $AzulDrean;
-    display: flex;
-    flex-flow: column wrap;
-    padding: 0 2% 0 2%;
-    justify-content: space-between;
-    align-items: center;
-    grid-area: footer;
-}
-
-
-/* Acomodo Footer */
-
-@media(min-width:371px) {
-    footer {
-        background-color: $AzulDrean;
-        display: flex;
-        flex-flow: row wrap;
-        height: 65.8px;
-        padding: 0 2% 0 2%;
-        justify-content: space-between;
-        align-items: center;
-        grid-area: footer;
-    }
-
-
-}
-
-
-/* Actualizo un poco los valores del heading y de la lista en el main del index */
-
-@media(min-width:410px) {
-    .h1Main {
-        font-size: 2rem;
-    }
-
-    .primeraSeccion__div__lista {
-        font-size: 20px;
-    }
-
-    .pFooter {
-        font-size: small;
-    }
-
-
-    /* Aumento las imagenes de REFERENCIAS.html*/
-    .imgReseñas {
-        width: 300px;
-    }
-
-    /* Aumento las imagenes y el fontsize de REPARACIONES.HTML */
-    .imagenRep {
-        width: 350px;
-    }
-
-    .pReparaciones {
-        font-size: 17px;
-    }
-
-    .articleReparaciones {
-        width: 30vw;
-    }
-
-    .reparacion1 {
-        padding: 0;
-    }
-
-    .reparacion2 {
-        padding: 0;
-    }
-
-    .reparacion3 {
-        padding: 0;
-    }
-
-
-
-}
-
-
-
-/* Acomodo el preefooter */
-
-@media(min-width:480px) {
-
-    .gridIndex {
-        display: grid;
+    @media(min-width:480px) {
         grid-template-areas:
             "header header header"
             "nav1 nav1 nav1"
@@ -403,117 +294,11 @@ footer {
             "main main main"
             "garantia1 garantia1 garantia2"
             "footer footer footer";
-
-
     }
 
-    .garantia--R {
-        justify-content: end;
-    }
+    /* Acomodo la NavBar en una fila */
 
-    /* Pequeño ajuste de font en REPARACIONES.HTML*/
-    .h2Rep {
-        font-size: 1.875rem;
-    }
-
-
-    .fila1 {
-        width: 40vw;
-    }
-
-}
-
-
-/* Manejo el tamaño de la fuente */
-/* Manejo el tamaño de los elementos de contacto.html*/
-/* Manejo el tamaño de las imagenes de referencias.html*/
-
-@media(min-width:500px) {
-
-    /* INDEX */
-
-    .primeraSeccion__div__lista {
-        font-size: 25px;
-    }
-
-    /* CONTACTO.html */
-
-    .divContacto {
-        width: 468.8px;
-    }
-
-    .h3dir {
-        width: 400px;
-    }
-
-    .gmaps {
-        width: 400px;
-        height: 260px;
-    }
-
-    /* RESEFERENCIAS.html */
-
-    .imgReseñas {
-        width: 350px;
-    }
-
-
-}
-
-/* Reduzco el tamaño de la fuente del titulo para que entre mejor (fuera de la media qerie) */
-
-@media(min-width:556px) {
-
-    .h1Main {
-        font-size: 2.5rem;
-    }
-
-}
-
-/* Acomodo el tamaño del titulo de REFERENCIAS.HTML */
-@media(min-width:605px) {
-
-    .h2Referencias {
-        font-size: 1.875rem;
-        ;
-    }
-
-}
-
-
-/*Acomodo las imagenes de NOSOTROS.HTML */
-@media(min-width:650px) {
-    .imgNosotros1 {
-        width: 479px;
-    }
-
-    .imgNosotros2 {
-        width: 407px;
-    }
-
-    /* Acomodo las imagenes y fontsize de REPARACIONES.HTML */
-
-    .imagenRep {
-        width: auto;
-    }
-
-    .pReparaciones {
-        font-size: 1.25rem;
-    }
-
-
-}
-
-
-/* -- Acomodo la navbar entera en una fila (este es el punto justo en el que los enlaces se empiezan a desacomodar con menos ancho)
-Tambien acomodo la lista y el boton del mail en una sola fila -- */
-
-@media(min-width:717px) {
-
-    /* INDEX */
-
-    .gridIndex {
-        display: grid;
+    @media(min-width:717px) {
         grid-template-areas:
             "header header header"
             "nav1 nav2 nav2"
@@ -522,168 +307,9 @@ Tambien acomodo la lista y el boton del mail en una sola fila -- */
             "footer footer footer";
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: auto auto auto auto auto;
-
-
-    }
-
-    .nav2 {
-        position: sticky;
-        top: 0px;
-    }
-
-    .primeraSeccion {
-        display: grid;
-
-        grid-template:
-            "title"auto "lista"1fr "boton"2fr;
-        place-items: center center;
-
-    }
-
-    /* CONTACTO.HTML */
-    /* Re ajusto los tamaños del mapa y su titulo */
-
-    .h3dir {
-        width: 650px;
-    }
-
-    .gmaps {
-        width: 650px;
-        height: 378px;
-    }
-
-
-    /* NOSOTROS.HTML */
-    /* Re ajusto tamaños de items hijos de flex */
-
-    .nosotros--R {
-        height: 350px;
-        width: 578px;
-        padding: 1%;
-    }
-
-    .nosotros2--L {
-        height: 300px;
-        width: 559px;
-        padding: 1%;
-    }
-
-}
-
-/* Le agrego un margin al main por que queda mas acorde al resto de la web, cuando se tiene mas ancho disponible */
-
-@media(min-width:803px) {
-
-    .primeraSeccion {
-        display: grid;
-        grid-template:
-            "title" auto
-            "lista" auto
-            "boton" auto;
-        place-items: center center;
-        gap: 10px 15px;
-        margin: 0 15% 0 15%;
-    }
-
-    /* Ajusto el formulario en el INDEX.HTML */
-    .primeraSeccion__div__form {
-        width: 100%;
-    }
-
-}
-
-/* En REFERENCIAS.html incluyo una imagen de fondo */
-
-@media(min-width: 900px) {
-    .mainReferencias {
-        background-image: url(../images/fondo-reseñas-opacity-3.png);
-        background-size: cover;
     }
 }
 
 
 
-/* Acomodo REPARACIONES.HTML en filas */
-@media(min-width: 950px) {
 
-    .fila1 {
-        grid-area: fila1;
-        width: 40vw;
-    }
-
-    .reparacion1 {
-        grid-area: reparacion1;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        border: 0.5px solid $GrisFuente;
-        border-radius: 10px;
-        width: 80vw;
-    }
-
-    .reparacion2 {
-        grid-area: reparacion2;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        border: 0.5px solid $GrisFuente;
-        border-radius: 10px;
-        width: 80vw;
-    }
-
-    .reparacion3 {
-        grid-area: reparacion3;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        border: 0.5px solid $GrisFuente;
-        border-radius: 10px;
-        width: 80vw;
-    }
-
-    .articleReparaciones {
-        width: 30vw;
-        padding: 0 2vw 0 2vw;
-    }
-
-    .divRep {
-        height: 300px;
-    }
-
-    .imagenRep {
-        border-radius: 10px;
-        /*grid-area: imagenRep;*/
-        justify-self: end;
-    }
-
-}
-
-
-/* En REFERENCIAS.html agrando las imagenes */
-@media(min-width:1225px) {
-    .imgReseñas {
-        width: 475px;
-    }
-}
-
-
-/* acomodo en CONTACTO.htl los items en una fila, al tener todo el ancho disponible */
-
-@media(min-width:1400px) {
-    .mainContacto {
-        flex-direction: row;
-        align-items: flex-start;
-    }
-
-    /* En NOSOTROS.HTML acomodo la grilla en 2 v 2 */
-
-    .nosotros {
-        grid-template-areas:
-            "taller nosotros1"
-            "nosotros2 lvropa";
-    }
-
-}
