--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 /* COLORES */
-/*$AzulDrean: green;*/
 /* Redondeo Imagenes */
 /* Practicamente lo dejo por lo academico, para aplicar una operacion *2 en el html de nosotros */
+/* Utilizo un mixin para combinar varias lineas que utilizo mucho cuando defino un contenedor flexbox */
 /* Estilos Secciones HTMLS */
-/* ----------- main INDEX ----------- */
+/* ----------- ESTILOS INDEX HTML ----------- */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto+Condensed:wght@300;400&family=Roboto:wght@300&display=swap");
 .fondoMainIndex {
   background-image: url("../images/fondo-lavarropas-ajustado.png");
@@ -13,9 +13,27 @@
   background-size: cover;
 }
 
-/* la clase .primeraSeccion se desarrolla mas abajo en la seccion de Mqueries */
+.primeraSeccion {
+  display: grid;
+  grid-template: "title" auto "lista" 1fr "boton" 2fr;
+  place-items: center center;
+}
+@media (min-width: 803px) {
+  .primeraSeccion {
+    grid-template: "title" auto "lista" auto "boton" auto;
+    gap: 10px 15px;
+    margin: 0 15% 0 15%;
+  }
+}
+
 .h1Main {
   grid-area: title;
+  font-size: 1.5rem;
+}
+@media (min-width: 556px) {
+  .h1Main {
+    font-size: 2.5rem;
+  }
 }
 
 .primeraSeccion__div {
@@ -33,11 +51,20 @@
   border: none;
   letter-spacing: 1px;
   line-height: 1.5;
+  padding-bottom: 2%;
+}
+@media (min-width: 410px) {
+  .primeraSeccion__div__lista {
+    font-size: 20px;
+  }
+}
+@media (min-width: 500px) {
+  .primeraSeccion__div__lista {
+    font-size: 25px;
+  }
 }
 
 .primeraSeccion__div__form {
-  /* background-color: #0077b6; opacity: 1; */
-  /* DUDA: POR QUE SI MODIFICO EL OPACITY DEL BACKGROUND COLOR, CUANDO BAJO EL SCROLL Y EL NAV BAR (CON POSITIION STICKY) LLEGA A LA ALTURA DEL "BOTON" ESTE SE SOBREPONE? SI LO DEJO CON OPACITY 1 ESTO NO SUCEDE. */
   border-width: 0.25px;
   border-radius: 10px;
   padding: 8px;
@@ -45,6 +72,11 @@
   border-color: #53585e;
   margin: 20px 0 20px 0;
   width: 85vw;
+}
+@media (min-width: 803px) {
+  .primeraSeccion__div__form {
+    width: 100%;
+  }
 }
 
 .labelForm {
@@ -59,8 +91,9 @@
 
 .botonForm {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   background-color: #025bac;
   border-color: #025bac;
 }
@@ -69,7 +102,7 @@
   padding-left: 10px;
 }
 
-/* ----------- CONTACTO HTML ----------- */
+/* ----------- ESTILOS CONTACTO HTML ----------- */
 .mainContacto {
   display: flex;
   flex-direction: column;
@@ -78,6 +111,12 @@
   padding: 50px 0 50px 0;
   margin: 30px 7.5% 30px 7.5%;
 }
+@media (min-width: 1400px) {
+  .mainContacto {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+}
 
 .seccionContacto--L {
   display: flex;
@@ -85,8 +124,7 @@
   justify-content: space-around;
   align-items: center;
   height: 400px;
-  border: solid;
-  border-color: #53585e;
+  border: solid #53585e;
   border-radius: 10px;
   padding: 5px;
   margin-bottom: 50px;
@@ -99,6 +137,11 @@
   justify-content: normal;
   align-items: center;
   width: 250px;
+}
+@media (min-width: 500px) {
+  .divContacto {
+    width: 468.8px;
+  }
 }
 
 .textContacto {
@@ -123,28 +166,39 @@
   width: 250px;
   text-align: center;
 }
+@media (min-width: 500px) {
+  .h3dir {
+    width: 400px;
+  }
+}
+@media (min-width: 717px) {
+  .h3dir {
+    width: 650px;
+  }
+}
 
 .gmaps {
   width: 250px;
   height: 250px;
   margin: 10px 0 0 0;
 }
+@media (min-width: 500px) {
+  .gmaps {
+    width: 400px;
+    height: 260px;
+  }
+}
+@media (min-width: 717px) {
+  .gmaps {
+    width: 650px;
+    height: 378px;
+  }
+}
 
 /* ----------- REFERENCIAS HTML ----------- */
 /* 
 NOTAS:
-En este punto incluí un grid system en una section por que la profesora dijo que era mejor utilizar tanto grid nativo como grid system, y poder corroborar el manejo de ambos para la entrega, lo cual es muy logico en terminos academicos y me vino muy bien para aprender.
-
-Se me ocurrio incluirlo aca para acomodar la seccion con todos los enlaces de las referencias y reseñas de la gente para con el sitio.
-
-La verdad que fue muy engorroso por que el CDN de bootstrap me modifico un monton de propiedades por default de CSS (que en el mio no estaban explicitas) y me desacomodo todo el html.
-
-Para que quede implementado correctamente tuve que rastrear una por una estas modificaciones. 
-
-ME GUSTARIA SABER SI HAY ALGUNA MANERA MENOS ORTODOXA DE COMPLEMENTAR BOOTSTRAP CON UN MAQUETADO DE CSS NATIVO
-
-esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de usar un grid system. El problema surge con la necesidad de incorporar componentes.
-*/
+En este punto incluí un grid system en una section con fines academicos, para aplicarlo en algun punto del proyecto. */
 .mainReferencias {
   display: flex;
   flex-direction: column;
@@ -154,6 +208,12 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
   background-color: #e3e3e3;
   margin: 30px 7.5% 30px 7.5%;
   border-radius: 10px;
+}
+@media (min-width: 900px) {
+  .mainReferencias {
+    background-image: url(../images/fondo-reseñas-opacity-3.png);
+    background-size: cover;
+  }
 }
 
 .refTitle {
@@ -167,6 +227,11 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
   padding: 1.5%;
   font-size: 1.3rem;
   font-weight: bold;
+}
+@media (min-width: 605px) {
+  .h2Referencias {
+    font-size: 1.875rem;
+  }
 }
 
 .refContainer {
@@ -189,6 +254,21 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
   padding: 0px;
   width: 200px;
 }
+@media (min-width: 410px) {
+  .imgReseñas {
+    width: 300px;
+  }
+}
+@media (min-width: 500px) {
+  .imgReseñas {
+    width: 350px;
+  }
+}
+@media (min-width: 1225px) {
+  .imgReseñas {
+    width: 475px;
+  }
+}
 
 /* ----------- NOSOTROS HTML ----------- */
 .mainNosotros {
@@ -202,11 +282,21 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
   place-items: center center;
   width: 100%;
 }
+@media (min-width: 1400px) {
+  .nosotros {
+    grid-template-areas: "taller nosotros1" "nosotros2 lvropa";
+  }
+}
 
 .imgNosotros1 {
   grid-area: taller;
   border-radius: 20px;
   width: 73vw;
+}
+@media (min-width: 650px) {
+  .imgNosotros1 {
+    width: 479px;
+  }
 }
 
 .nosotros--R {
@@ -217,6 +307,13 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
   grid-area: nosotros1;
   width: auto;
   padding: 5% 1% 5% 1%;
+}
+@media (min-width: 717px) {
+  .nosotros--R {
+    height: 350px;
+    width: 578px;
+    padding: 1%;
+  }
 }
 
 .h2Nosotros {
@@ -238,11 +335,16 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
   width: auto;
   padding-top: 30px;
 }
+@media (min-width: 717px) {
+  .nosotros2--L {
+    height: 300px;
+    width: 559px;
+    padding: 1%;
+  }
+}
 
 .mision {
   border-bottom: 0.5px solid #53585e;
-  /* border-width: 0.5px;
-  border-color: $GrisFuente; */
   padding: 0 0 2.5% 0;
 }
 
@@ -255,6 +357,11 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
   width: 73vw;
   border-radius: 20px;
   padding: 8% 0 4% 0;
+}
+@media (min-width: 650px) {
+  .imgNosotros2 {
+    width: 407px;
+  }
 }
 
 /* ----------- REPARACIONES HTML ----------- */
@@ -279,8 +386,19 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
   grid-area: fila1;
   width: auto;
 }
+@media (min-width: 480px) {
+  .fila1 {
+    width: 40vw;
+  }
+}
+@media (min-width: 950px) {
+  .fila1 {
+    grid-area: fila1;
+    width: 40vw;
+  }
+}
 
-.reparacion1 {
+.reparacion1, .reparacion3, .reparacion2 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -293,39 +411,33 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
   padding-bottom: 15px;
   overflow: hidden;
 }
-.reparacion1:hover .img1 {
+.reparacion1:hover .img1, .reparacion1:hover .img3, .reparacion1:hover .img2, .reparacion3:hover .img1, .reparacion3:hover .img3, .reparacion3:hover .img2, .reparacion2:hover .img1, .reparacion2:hover .img3, .reparacion2:hover .img2 {
   transform: scale(1.5);
+}
+@media (min-width: 410px) {
+  .reparacion1, .reparacion3, .reparacion2 {
+    padding: 0;
+  }
+}
+@media (min-width: 950px) {
+  .reparacion1, .reparacion3, .reparacion2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 80vw;
+  }
 }
 
 .reparacion2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
   grid-area: reparacion2;
-  border: 0.5px solid #53585e;
-  border-radius: 10px;
-  width: auto;
-  height: auto;
-  padding-top: 15px;
-  overflow: hidden;
 }
 .reparacion2:hover .img2 {
   transform: scale(1.5);
 }
 
 .reparacion3 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
   grid-area: reparacion3;
-  border: 0.5px solid #53585e;
-  border-radius: 10px;
-  width: auto;
-  height: auto;
-  padding-bottom: 15px;
-  overflow: hidden;
 }
 .reparacion3:hover .img3 {
   transform: scale(1.5);
@@ -335,24 +447,34 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
   width: auto;
   padding: 15px 0 15px 0;
 }
+@media (min-width: 410px) {
+  .articleReparaciones {
+    width: 30vw;
+  }
+}
+@media (min-width: 950px) {
+  .articleReparaciones {
+    padding: 0 2vw 0 2vw;
+  }
+}
 
 .imagenRep {
   border-radius: 10px;
   justify-self: end;
   width: 200px;
 }
-
-.img1 {
-  transition: all 3s;
-  z-index: -1;
+@media (min-width: 410px) {
+  .imagenRep {
+    width: 350px;
+  }
+}
+@media (min-width: 650px) {
+  .imagenRep {
+    width: auto;
+  }
 }
 
-.img2 {
-  transition: all 3s;
-  z-index: -1;
-}
-
-.img3 {
+.img1, .img3, .img2 {
   transition: all 3s;
   z-index: -1;
 }
@@ -365,14 +487,31 @@ esto lo digo por que yo estaba conforme con mi estructura, y puedo prescindir de
 .h2Rep {
   font-size: 1.5rem;
 }
+@media (min-width: 480px) {
+  .h2Rep {
+    font-size: 1.875rem;
+  }
+}
 
 .pReparaciones {
   text-align: center;
   font-size: 15px;
 }
+@media (min-width: 410px) {
+  .pReparaciones {
+    font-size: 17px;
+  }
+}
+@media (min-width: 650px) {
+  .pReparaciones {
+    font-size: 1.25rem;
+  }
+}
 
-/* Asi se comenta en CSS*/
-/*, este es el reseteo*/
+/* Importo las fuentes con las que se va a trabajar en el proyecto */
+/* Este archivo .SCSS contiene estilos generales aplicados a todos los html */
+/* ----------- MEDIA QUERIES -----------  */
+/* El objetivo fue que el sitio sea completamente responsive, en todos sus html a partir de un ancho de ventana de 300px */
 * {
   padding: 0;
   margin: 0;
@@ -385,7 +524,6 @@ body {
 }
 
 /* ----------- TEXTO ----------- */
-/* Etiqueta Anchor*/
 a {
   text-decoration: none;
   color: #fffefd;
@@ -441,10 +579,11 @@ header {
 /* ----------- NAV BAR ----------- */
 nav {
   background-color: #025bac;
-  /* 2158a7 color viejo */
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: row;
   justify-content: space-around;
+  align-items: normal;
+  flex-wrap: wrap;
   top: 0;
   height: 61px;
 }
@@ -459,13 +598,20 @@ nav {
   grid-area: nav2;
   position: -webkit-sticky;
   position: sticky;
+  top: 61px;
+}
+@media (min-width: 717px) {
+  .nav2 {
+    top: 0px;
+  }
 }
 
 .hijonav2 {
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -488,10 +634,11 @@ nav {
 }
 
 .garantia--L {
-  grid-area: garantia1;
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: start;
+  align-items: center;
+  grid-area: garantia1;
   padding: 0 0 0 5%;
 }
 
@@ -504,6 +651,11 @@ nav {
   display: flex;
   justify-content: center;
   padding-right: 5%;
+}
+@media (min-width: 480px) {
+  .garantia--R {
+    justify-content: end;
+  }
 }
 
 .garantia--h2 {
@@ -518,7 +670,30 @@ nav {
 }
 
 /* ----------- FOOTER ----------- */
-/* los estilos de <footer> lo llevo a la parte de Media Queries, linea 600 */
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #025bac;
+  flex-wrap: wrap;
+  padding: 0 2% 0 2%;
+  grid-area: footer;
+}
+@media (min-width: 371px) {
+  footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #025bac;
+    flex-wrap: wrap;
+    height: 65.8px;
+    padding: 0 2% 0 2%;
+    grid-area: footer;
+  }
+}
+
 .footerL {
   display: flex;
   padding-left: 10px;
@@ -532,6 +707,11 @@ nav {
   font-family: "Roboto", sans-serif;
   font-size: 11px;
   color: #000000;
+}
+@media (min-width: 410px) {
+  .pFooter {
+    font-size: small;
+  }
 }
 
 .footerR {
@@ -568,297 +748,26 @@ nav {
   }
 }
 /* ----------- Grilla GENERAL (body) ---------- */
-/* La clase de la grilla general se desarrolla en la parte de media queries (linea 598) */
 main {
   padding: 0;
   grid-area: main;
 }
 
-/* ----------- MEDIA QUERIES -----------  */
-/* El objetivo fue que el sitio sea completamente responsive, en todos sus html a partir de un ancho de ventana de 300px */
 .gridIndex {
   display: grid;
   grid-template-areas: "header" "nav1" "nav2" "main" "garantia1" "garantia2" "footer";
+  /* Acomodo el preefooter */
+  /* Acomodo la NavBar en una fila */
 }
-
-.nav1 {
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-.nav2 {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 61px;
-}
-
-.primeraSeccion {
-  display: grid;
-  grid-template: "title" auto "lista" 1fr "boton" 2fr;
-  place-items: center center;
-}
-
-.h1Main {
-  font-size: 1.5rem;
-}
-
-.primeraSeccion__div__lista li {
-  padding-bottom: 2%;
-}
-
-footer {
-  background-color: #025bac;
-  display: flex;
-  flex-flow: column wrap;
-  padding: 0 2% 0 2%;
-  justify-content: space-between;
-  align-items: center;
-  grid-area: footer;
-}
-
-/* Acomodo Footer */
-@media (min-width: 371px) {
-  footer {
-    background-color: #025bac;
-    display: flex;
-    flex-flow: row wrap;
-    height: 65.8px;
-    padding: 0 2% 0 2%;
-    justify-content: space-between;
-    align-items: center;
-    grid-area: footer;
-  }
-}
-/* Actualizo un poco los valores del heading y de la lista en el main del index */
-@media (min-width: 410px) {
-  .h1Main {
-    font-size: 2rem;
-  }
-  .primeraSeccion__div__lista {
-    font-size: 20px;
-  }
-  .pFooter {
-    font-size: small;
-  }
-  /* Aumento las imagenes de REFERENCIAS.html*/
-  .imgReseñas {
-    width: 300px;
-  }
-  /* Aumento las imagenes y el fontsize de REPARACIONES.HTML */
-  .imagenRep {
-    width: 350px;
-  }
-  .pReparaciones {
-    font-size: 17px;
-  }
-  .articleReparaciones {
-    width: 30vw;
-  }
-  .reparacion1 {
-    padding: 0;
-  }
-  .reparacion2 {
-    padding: 0;
-  }
-  .reparacion3 {
-    padding: 0;
-  }
-}
-/* Acomodo el preefooter */
 @media (min-width: 480px) {
   .gridIndex {
-    display: grid;
     grid-template-areas: "header header header" "nav1 nav1 nav1" "nav2 nav2 nav2" "main main main" "garantia1 garantia1 garantia2" "footer footer footer";
   }
-  .garantia--R {
-    justify-content: end;
-  }
-  /* Pequeño ajuste de font en REPARACIONES.HTML*/
-  .h2Rep {
-    font-size: 1.875rem;
-  }
-  .fila1 {
-    width: 40vw;
-  }
 }
-/* Manejo el tamaño de la fuente */
-/* Manejo el tamaño de los elementos de contacto.html*/
-/* Manejo el tamaño de las imagenes de referencias.html*/
-@media (min-width: 500px) {
-  /* INDEX */
-  .primeraSeccion__div__lista {
-    font-size: 25px;
-  }
-  /* CONTACTO.html */
-  .divContacto {
-    width: 468.8px;
-  }
-  .h3dir {
-    width: 400px;
-  }
-  .gmaps {
-    width: 400px;
-    height: 260px;
-  }
-  /* RESEFERENCIAS.html */
-  .imgReseñas {
-    width: 350px;
-  }
-}
-/* Reduzco el tamaño de la fuente del titulo para que entre mejor (fuera de la media qerie) */
-@media (min-width: 556px) {
-  .h1Main {
-    font-size: 2.5rem;
-  }
-}
-/* Acomodo el tamaño del titulo de REFERENCIAS.HTML */
-@media (min-width: 605px) {
-  .h2Referencias {
-    font-size: 1.875rem;
-  }
-}
-/*Acomodo las imagenes de NOSOTROS.HTML */
-@media (min-width: 650px) {
-  .imgNosotros1 {
-    width: 479px;
-  }
-  .imgNosotros2 {
-    width: 407px;
-  }
-  /* Acomodo las imagenes y fontsize de REPARACIONES.HTML */
-  .imagenRep {
-    width: auto;
-  }
-  .pReparaciones {
-    font-size: 1.25rem;
-  }
-}
-/* -- Acomodo la navbar entera en una fila (este es el punto justo en el que los enlaces se empiezan a desacomodar con menos ancho)
-Tambien acomodo la lista y el boton del mail en una sola fila -- */
 @media (min-width: 717px) {
-  /* INDEX */
   .gridIndex {
-    display: grid;
     grid-template-areas: "header header header" "nav1 nav2 nav2" "main main main" "garantia1 garantia1 garantia2" "footer footer footer";
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto auto;
-  }
-  .nav2 {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0px;
-  }
-  .primeraSeccion {
-    display: grid;
-    grid-template: "title" auto "lista" 1fr "boton" 2fr;
-    place-items: center center;
-  }
-  /* CONTACTO.HTML */
-  /* Re ajusto los tamaños del mapa y su titulo */
-  .h3dir {
-    width: 650px;
-  }
-  .gmaps {
-    width: 650px;
-    height: 378px;
-  }
-  /* NOSOTROS.HTML */
-  /* Re ajusto tamaños de items hijos de flex */
-  .nosotros--R {
-    height: 350px;
-    width: 578px;
-    padding: 1%;
-  }
-  .nosotros2--L {
-    height: 300px;
-    width: 559px;
-    padding: 1%;
-  }
-}
-/* Le agrego un margin al main por que queda mas acorde al resto de la web, cuando se tiene mas ancho disponible */
-@media (min-width: 803px) {
-  .primeraSeccion {
-    display: grid;
-    grid-template: "title" auto "lista" auto "boton" auto;
-    place-items: center center;
-    gap: 10px 15px;
-    margin: 0 15% 0 15%;
-  }
-  /* Ajusto el formulario en el INDEX.HTML */
-  .primeraSeccion__div__form {
-    width: 100%;
-  }
-}
-/* En REFERENCIAS.html incluyo una imagen de fondo */
-@media (min-width: 900px) {
-  .mainReferencias {
-    background-image: url(../images/fondo-reseñas-opacity-3.png);
-    background-size: cover;
-  }
-}
-/* Acomodo REPARACIONES.HTML en filas */
-@media (min-width: 950px) {
-  .fila1 {
-    grid-area: fila1;
-    width: 40vw;
-  }
-  .reparacion1 {
-    grid-area: reparacion1;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: 0.5px solid #53585e;
-    border-radius: 10px;
-    width: 80vw;
-  }
-  .reparacion2 {
-    grid-area: reparacion2;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: 0.5px solid #53585e;
-    border-radius: 10px;
-    width: 80vw;
-  }
-  .reparacion3 {
-    grid-area: reparacion3;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    border: 0.5px solid #53585e;
-    border-radius: 10px;
-    width: 80vw;
-  }
-  .articleReparaciones {
-    width: 30vw;
-    padding: 0 2vw 0 2vw;
-  }
-  .divRep {
-    height: 300px;
-  }
-  .imagenRep {
-    border-radius: 10px;
-    /*grid-area: imagenRep;*/
-    justify-self: end;
-  }
-}
-/* En REFERENCIAS.html agrando las imagenes */
-@media (min-width: 1225px) {
-  .imgReseñas {
-    width: 475px;
-  }
-}
-/* acomodo en CONTACTO.htl los items en una fila, al tener todo el ancho disponible */
-@media (min-width: 1400px) {
-  .mainContacto {
-    flex-direction: row;
-    align-items: flex-start;
-  }
-  /* En NOSOTROS.HTML acomodo la grilla en 2 v 2 */
-  .nosotros {
-    grid-template-areas: "taller nosotros1" "nosotros2 lvropa";
   }
 }/*# sourceMappingURL=style.css.map */
