--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -1,4 +1,4 @@
-/* ----------- CONTACTO HTML ----------- */
+/* ----------- ESTILOS CONTACTO HTML ----------- */
 
 
 .mainContacto {
@@ -6,14 +6,18 @@
     padding: 50px 0 50px 0;
     margin: 30px 7.5% 30px 7.5%;
 
+    @media(min-width:1400px) {
+        flex-direction: row;
+        align-items: flex-start;
+    }
+
 }
 
 .seccionContacto--L {
 
     @include flexbox(flex, column, space-around, center);
     height: 400px;
-    border: solid;
-    border-color: $GrisFuente;
+    border: solid $GrisFuente;
     border-radius: 10px;
     padding: 5px;
     margin-bottom: 50px;
@@ -23,6 +27,10 @@
 .divContacto {
     @include flexbox(flex, column, normal, center);
     width: 250px;
+
+    @media(min-width:500px) {    
+        width: 468.8px;
+    }
 }
 
 .textContacto {
@@ -42,10 +50,28 @@
     border-width: 1px;
     width: 250px;
     text-align: center;
+
+    @media(min-width:500px) {
+        width: 400px;
+    }
+
+    @media(min-width:717px) {
+        width: 650px;
+    }
 }
 
 .gmaps {
     width: 250px;
     height: 250px;
     margin: 10px 0 0 0;
+
+    @media(min-width:500px) {
+        width: 400px;
+        height: 260px;
+    }
+
+    @media(min-width:717px) {
+        width: 650px;
+        height: 378px;
+    }
 }
