--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,5 +1,5 @@
 
-/* ----------- main INDEX ----------- */
+/* ----------- ESTILOS INDEX HTML ----------- */
 
 .fondoMainIndex {
     background-image: url("../images/fondo-lavarropas-ajustado.png");
@@ -10,11 +10,33 @@
 
 
 
-/* la clase .primeraSeccion se desarrolla mas abajo en la seccion de Mqueries */
+.primeraSeccion {
+    display: grid;
 
+    grid-template:
+        "title"auto 
+        "lista"1fr 
+        "boton"2fr;
+    place-items: center center;
+
+    @media(min-width:803px) {
+        grid-template:
+            "title" auto
+            "lista" auto
+            "boton" auto;
+        gap: 10px 15px;
+        margin: 0 15% 0 15%;
+    }
+
+}
 
 .h1Main {
     grid-area: title;
+    font-size: 1.5rem;
+
+    @media(min-width:556px) {
+        font-size: 2.5rem;
+    }
 }
 
 .primeraSeccion__div {
@@ -32,16 +54,23 @@
         border: none;
         letter-spacing: 1px;
         line-height: 1.5;
+        padding-bottom: 2%;
     }
+
+    @media(min-width:410px) {
+        font-size: 20px;
+    }
+
+    @media(min-width:500px) {    
+        font-size: 25px;
+    }
+
 
 }
 
 
 
 .primeraSeccion__div__form {
-    /* background-color: #0077b6; opacity: 1; */
-
-    /* DUDA: POR QUE SI MODIFICO EL OPACITY DEL BACKGROUND COLOR, CUANDO BAJO EL SCROLL Y EL NAV BAR (CON POSITIION STICKY) LLEGA A LA ALTURA DEL "BOTON" ESTE SE SOBREPONE? SI LO DEJO CON OPACITY 1 ESTO NO SUCEDE. */
 
     border-width: 0.25px;
     border-radius: 10px;
@@ -50,6 +79,10 @@
     border-color: $GrisFuente;
     margin: 20px 0 20px 0;
     width: 85vw;
+
+    @media(min-width:803px) {
+        width: 100%;
+    }
 }
 
 .labelForm {
@@ -63,9 +96,7 @@
 }
 
 .botonForm {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    @include flexbox(flex, row, space-between, center);
     background-color: $AzulDrean;
     border-color: $AzulDrean;
 }
