--- a/sass/_reparaciones.scss
+++ b/sass/_reparaciones.scss
@@ -25,6 +25,15 @@
 .fila1 {
     grid-area: fila1;
     width: auto;
+
+    @media(min-width:480px) {
+        width: 40vw;
+    }
+
+    @media(min-width: 950px) {
+        grid-area: fila1;
+        width: 40vw;
+    }
 }
 
 .reparacion1 {
@@ -42,18 +51,20 @@
             transform: scale(1.5);
         }
     }
+
+    @media(min-width:410px) {
+        padding: 0;
+    }
+
+    @media(min-width: 950px) {
+        @include flexbox (flex, row, space-between, center);
+        width: 80vw;
+    }
 }
 
 .reparacion2 {
-    @include flexbox(flex, column, space-between, center);
+    @extend .reparacion1;
     grid-area: reparacion2;
-    border: 0.5px solid $GrisFuente;
-    border-radius: 10px;
-    width: auto;
-    height: auto;
-    padding-top: 15px;
-    overflow: hidden;
-
     &:hover{
         .img2{
             transform: scale(1.5);
@@ -62,15 +73,8 @@
 }
 
 .reparacion3 {
-    @include flexbox(flex, column, space-between, center);
+    @extend .reparacion1;
     grid-area: reparacion3;
-    border: 0.5px solid $GrisFuente;
-    border-radius: 10px;
-    width: auto;
-    height: auto;
-    padding-bottom: 15px;
-    overflow: hidden;
-
     &:hover{
         .img3{
             transform: scale(1.5);
@@ -81,6 +85,14 @@
 .articleReparaciones {
     width: auto;
     padding: 15px 0 15px 0;
+
+    @media(min-width:410px) {
+        width: 30vw;
+    }
+
+    @media(min-width: 950px) {
+        padding: 0 2vw 0 2vw;
+    }
 }
 
 
@@ -88,21 +100,29 @@
     border-radius: 10px;
     justify-self: end;
     width: 200px;
+
+    @media(min-width:410px) {
+        width: 350px;
+    }
+
+    @media(min-width:650px) {
+        width: auto;
+    }
 }
 
 .img1 {
     transition: all 3s;
     z-index: -1;
+
+
 }
 
 .img2 {
-    transition: all 3s;
-    z-index: -1;
+    @extend .img1;
 }
 
 .img3 {
-    transition: all 3s;
-    z-index: -1;
+    @extend .img1;
 }
 
 
@@ -113,9 +133,21 @@
 
 .h2Rep {
     font-size: 1.5rem;
+
+    @media(min-width:480px) {
+        font-size: 1.875rem;
+    }
 }
 
 .pReparaciones {
     text-align: center;
     font-size: 15px;
+
+    @media(min-width:410px) {
+        font-size: 17px;
+    }
+
+    @media(min-width:650px) {
+        font-size: 1.25rem;
+    }
 }
