--- a/sass/style.scss
+++ b/sass/style.scss
@@ -219,7 +219,7 @@ footer {
 .pFooter {
     font-family: 'Roboto', sans-serif;
     font-size: 11px;
-    color: #000000;
+    color: #fffefd;
 
     @media(min-width:410px) {
         font-size: small;
