Correcciones menores varias, agregado de algunos detalles esteticos

--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -33,6 +33,15 @@
     }
 }
 
+.h1Contacto{
+    font-family: 'Roboto', sans-serif;
+    color: $GrisFuente;
+    font-size: 1.875rem;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
 .textContacto {
     text-align: center;
 }
