--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -72,17 +72,32 @@
 
 .primeraSeccion__div__form {
 
-    border-width: 0.25px;
-    border-radius: 10px;
-    padding: 8px;
+
+    border: solid 0.25px $GrisFuente;
+    border-radius: 20px;
+    padding: 25px;
     grid-area: boton;
-    border-color: $GrisFuente;
     margin: 20px 0 20px 0;
     width: 85vw;
+
 
     @media(min-width:803px) {
         width: 100%;
     }
+}
+
+.formtitle{
+    text-align: center;
+    font-size: 1.5rem;
+
+    @media(min-width:556px) {
+        font-size: 1.875rem;
+    }
+
+}
+
+.emph{
+    color: red;
 }
 
 .labelForm {
