--- a/style/style.css
+++ b/style/style.css
@@ -65,11 +65,10 @@
 }
 
 .primeraSeccion__div__form {
-  border-width: 0.25px;
-  border-radius: 10px;
-  padding: 8px;
+  border: solid 0.25px #53585e;
+  border-radius: 20px;
+  padding: 25px;
   grid-area: boton;
-  border-color: #53585e;
   margin: 20px 0 20px 0;
   width: 85vw;
 }
@@ -77,6 +76,20 @@
   .primeraSeccion__div__form {
     width: 100%;
   }
+}
+
+.formtitle {
+  text-align: center;
+  font-size: 1.5rem;
+}
+@media (min-width: 556px) {
+  .formtitle {
+    font-size: 1.875rem;
+  }
+}
+
+.emph {
+  color: red;
 }
 
 .labelForm {
@@ -142,6 +155,15 @@
   .divContacto {
     width: 468.8px;
   }
+}
+
+.h1Contacto {
+  font-family: "Roboto", sans-serif;
+  color: #53585e;
+  font-size: 1.875rem;
+  border: none;
+  padding: 0;
+  margin: 0;
 }
 
 .textContacto {
@@ -220,16 +242,17 @@ En este punto incluí un grid system en una section con fines academicos, para a
   width: 95%;
 }
 
-.h2Referencias {
+.h1Referencias {
   text-align: center;
   border-bottom: 0.5px solid #53585e;
   color: #53585e;
   padding: 1.5%;
   font-size: 1.3rem;
   font-weight: bold;
+  margin: 0 0 8px 0;
 }
 @media (min-width: 605px) {
-  .h2Referencias {
+  .h1Referencias {
     font-size: 1.875rem;
   }
 }
@@ -484,11 +507,14 @@ En este punto incluí un grid system en una section con fines academicos, para a
   padding-bottom: 4px;
 }
 
-.h2Rep {
+.h1Rep {
   font-size: 1.5rem;
+  border: none;
+  padding: 0 0 4px 0;
+  margin: 0;
 }
 @media (min-width: 480px) {
-  .h2Rep {
+  .h1Rep {
     font-size: 1.875rem;
   }
 }
@@ -574,6 +600,7 @@ header {
   color: white;
   font-size: 7px;
   margin: 0;
+  height: 8px;
 }
 
 /* ----------- NAV BAR ----------- */
